added two way binding between parent and child components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,4 @@
 <app-loader></app-loader>
 <button class="btn btn-info" (click)="sendMessage();clearMessage()">Send Message</button>
 <button class="btn btn-info" (click)="clearMessage();sendMessage()">Clear Message</button>
+<app-parent></app-parent>
