--- a/src/parent/parent.component.html
+++ b/src/parent/parent.component.html
@@ -2,4 +2,10 @@
   parent works!
 </p>
 <input type="text" [(ngModel)]="message"/>
-<app-child [messageFromParent] = "message" (messageFromParentChange)="messageFromParentChanged($event)"></app-child>
+<input type="text" [(ngModel)]="user.userName"/>
+<input type="text" [(ngModel)]="user.age"/>
+<input type="radio" name="gender" [(ngModel)]="user.gender" value="male"/>Male
+<input type="radio" name="gender" [(ngModel)]="user.gender" value="female"/>Female
+<button (click)="submit()">submit</button>
+<!-- <app-child [messageFromParent] = "message" [userFromParent]="user" (messageFromParentChange)="messageFromParentChanged($event)"></app-child> -->
+<app-child [messageFromParent] = "message" [userFromParent]="user" ></app-child>
