--- a/src/loader/loader.component.html
+++ b/src/loader/loader.component.html
@@ -1,4 +1,4 @@
-<div  *ngIf="isVisible">
+<div  *ngIf="isVisible" class="main" [style.height.px]="bodyHeight">
 <div class="block-bg"></div>
 <div class="loader"></div>
 
