--- a/src/loader/loader.component.css
+++ b/src/loader/loader.component.css
@@ -1,3 +1,13 @@
+.main{
+  position: absolute;
+  width:100%;
+  top:0;
+  left:0;
+  z-index: 90;
+  background-color: black;
+  opacity: 0.8;
+}
+
 .loader {
   border: 10px solid #fbfdff;
   border-top: 10px solid #3498db; /* Blue */
@@ -55,7 +65,6 @@
  top:0;
  left:0;
  width:100%;
- height:100%;
  z-index:99;
  background-color: black;
  opacity: 0.8;
